--- a/builder/static/style.css
+++ b/builder/static/style.css
@@ -30,6 +30,8 @@ body {
     position: relative;
     transition: width 0.2s ease;
     flex-shrink: 0;
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar-left {
@@ -236,7 +238,7 @@ body {
 
 /* Resizer */
 .resizer {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     width: 4px;
@@ -244,6 +246,7 @@ body {
     cursor: col-resize;
     z-index: 10;
     transition: background-color 0.2s;
+    pointer-events: auto;
 }
 
 .resizer:hover {
