--- a/builder/templates/page.html
+++ b/builder/templates/page.html
@@ -35,7 +35,7 @@
         <aside class="sidebar sidebar-right" id="sidebar-right">
             <div class="sidebar-content">
                 <div class="sidebar-header">
-                    <h3>目录</h3>
+                    <h3>&nbsp;&nbsp;&nbsp;目录</h3>
                 </div>
                 <nav class="toc" id="toc">
                     {{if .TOC}}
